# Softdesk-support

./: .flake8  .gitignore  README.md  manage.py  pyproject.toml
.github/: dependabot.yml
authentication/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_user_date_of_birth.py
projects/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_project_description.py  0003_issue_comment.py
softdesk/: settings.py  urls.py
